--- a/package.json
+++ b/package.json
@@ -10,46 +10,51 @@
     "db:studio": "drizzle-kit studio",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "start:dev": "mprocs"
   },
   "dependencies": {
-    "@databuddy/sdk": "^2.0.0",
+    "@databuddy/sdk": "^2.2.1",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.3",
-    "@tailwindcss/postcss": "^4.1.13",
-    "@tanstack/react-query": "^5.87.0",
-    "better-auth": "^1.3.8",
+    "@tailwindcss/postcss": "^4.1.16",
+    "@tanstack/react-query": "^5.90.5",
+    "better-auth": "^1.3.34",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.44.5",
-    "hono": "^4.9.6",
+    "drizzle-orm": "^0.44.7",
+    "hono": "^4.10.3",
     "jstack": "^1.1.1",
-    "lucide-react": "^0.542.0",
-    "next": "^15.5.2",
+    "lucide-react": "^0.548.0",
+    "mprocs": "^0.7.3",
+    "next": "^16.0.1",
     "next-themes": "^0.4.6",
     "postgres": "^3.4.7",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "stripe": "^18.5.0",
-    "superjson": "^2.2.2",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "stripe": "^19.1.0",
+    "superjson": "^2.2.5",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.5"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250905.0",
-    "@types/node": "^24.3.1",
-    "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.9",
-    "dotenv": "^17.2.2",
-    "drizzle-kit": "^0.31.4",
-    "eslint": "^9.34.0",
-    "eslint-config-next": "^15.5.2",
+    "@cloudflare/workers-types": "^4.20251014.0",
+    "@types/node": "^24.9.2",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "dotenv": "^17.2.3",
+    "drizzle-kit": "^0.31.6",
+    "eslint": "^9.38.0",
+    "eslint-config-next": "^16.0.1",
     "eslint-plugin-drizzle": "^0.2.3",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.13",
-    "tw-animate-css": "^1.3.8",
-    "typescript": "^5.9.2",
-    "wrangler": "^4.34.0"
+    "tailwindcss": "^4.1.16",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5.9.3",
+    "wrangler": "^4.45.2"
   },
-  "packageManager": "pnpm@10.15.1+sha512.34e538c329b5553014ca8e8f4535997f96180a1d0f614339357449935350d924e22f8614682191264ec33d1462ac21561aff97f6bb18065351c162c7e8f6de67"
+  "packageManager": "pnpm@10.20.0+sha512.cf9998222162dd85864d0a8102e7892e7ba4ceadebbf5a31f9c2fce48dfce317a9c53b9f6464d1ef9042cba2e02ae02a9f7c143a2b438cd93c91840f0192b9dd",
+  "trustedDependencies": [
+    "unrs-resolver"
+  ]
 }
